syntax = "proto3";

package grpc;

option go_package = "./;grpc";

import "google/protobuf/empty.proto";

service Tracker {

  rpc RegisterTrackerInstance(TrackerInfo) returns (InstanceRegisterResponse) {}

  rpc GetAllRegisteredInstances(google.protobuf.Empty) returns (stream TrackerInfo) {}

  rpc RegisterNewPackage(PackageInfo) returns (PackageRegisterResponse) {}

  rpc FindPackageLocation(LocationRequest) returns (PackageLocation) {}

}

message PackageInfo {}

message PackageRegisterResponse {}

message LocationRequest {}

message PackageLocation {}

message TrackerInfo {
  string organizationId = 1;
  bool allow_public_access = 2;
  bool public_register = 3;
  repeated string partnerOrganizations = 4;
}

enum InstanceRegisterStatus {
  SUCCESS = 0;
  FAILED = 1;
}

message InstanceRegisterResponse {
  InstanceRegisterStatus status = 1;
  string error = 2;
}